--- a/index.html
+++ b/index.html
@@ -6,39 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEBSTUDIO</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-
-
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 
 </head>
 
 <body>    
 
-    <!-- header -->
+   <!-- header -->
 
-    <header class="header">
+   <header class="header">
 
-        <!-- Navigation -->
+    <!-- Navigation -->
 
-        <nav class="header-navigation">
-            <a class="header-logo link" href="./index.html"><span class="header-logo-web">WEB</span><span class="header-logo-studio">STUDIO</span></a>
-            <ul class="header-navigation-list list">
-                <li class="header-navigation-item"><a class="header-navigation-link current-page link" rel="noreffer noopener" target="_blank" href="./index.html">Studio</a></li>
-                <li class="header-navigation-item"><a class="header-navigation-link link" rel="noopener noreffer" target="_blank" href="./portfolio.html">Portfolio</a></li>
-                <li class="header-navigation-item"><a class="header-navigation-link link" href="#">Contacts</a></li>
-            </ul>
-        </nav>
-
-        <!-- Contacts -->
-
-        <ul class="header-contact-list list">
-                <li class="header-contact-item">
-                    <a class="header-contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li class="header-contact-item">
-                    <a class="header-contact-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </li>
+    <nav class="header-navigation">
+        <a class="header-logo link" href="./index.html"><span class="header-logo-web">WEB</span><span class="header-logo-studio">STUDIO</span></a>
+        <ul class="header-navigation-list list">
+            <li class="header-navigation-item"><a class="header-navigation-link current-page link" rel="noreffer noopener" target="_blank" href="./index.html">Studio</a></li>
+            <li class="header-navigation-item"><a class="header-navigation-link link" rel="noreffer noopener" target="_blank" href="./portfolio.html">Portfolio</a></li>
+            <li class="header-navigation-item"><a class="header-navigation-link link" href="#">Contacts</a></li>
         </ul>
+    </nav>
+
+    <!-- Contacts -->
+
+    <ul class="header-contact-list list">
+            <li class="header-contact-item">
+                <a class="header-contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="header-contact-item">
+                <a class="header-contact-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </li>
+    </ul>
 
     </header>
 
@@ -129,11 +127,9 @@
 
     <!-- Footer -->
 
-    <footer class="footer">
-        <a class="footer-logo link" href="./index.html"><span class="footer-logo-web">WEB</span><span
-        class="footer-logo-studio">STUDIO</span></a>
-        <p class="footer-text text">Increase the flow of customers and<br />sales for your business with digital<br />marketing & growth
-        solutions.</p>
+   <footer class="footer">
+        <a class="footer-logo link" href="./index.html"><span class="footer-logo-web">WEB</span><span class="footer-logo-studio">STUDIO</span></a>
+        <p class="footer-text text">Increase the flow of customers and<br />sales for your business with digital<br />marketing & growth solutions.</p>
     </footer>
     
 </body>
