--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     
 </head>
 
@@ -115,11 +115,9 @@
 
    <!-- Footer -->
 
-    <footer class="footer">
-        <a class="footer-logo link" href="./index.html"><span class="footer-logo-web">WEB</span><span
-            class="footer-logo-studio">STUDIO</span></a>
-         <p class="footer-text text">Increase the flow of customers and<br />sales for your business with digital<br />marketing & growth
-        solutions.</p>
+   <footer class="footer">
+        <a class="footer-logo link" href="./index.html"><span class="footer-logo-web">WEB</span><span class="footer-logo-studio">STUDIO</span></a>
+        <p class="footer-text text">Increase the flow of customers and<br />sales for your business with digital<br />marketing & growth solutions.</p>
     </footer>
 </body>
 
