--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <nav class="header-navigation">
         <a class="header-logo link" href="./index.html"><span class="header-logo-web">WEB</span><span class="header-logo-studio">STUDIO</span></a>
         <ul class="header-navigation-list list">
-            <li class="header-navigation-item"><a class="header-navigation-link current-page link" rel="noreffer noopener" target="_blank" href="./index.html">Studio</a></li>
-            <li class="header-navigation-item"><a class="header-navigation-link link" rel="noreffer noopener" target="_blank" href="./portfolio.html">Portfolio</a></li>
+            <li class="header-navigation-item"><a class="header-navigation-link current-page link" rel="noreffer noopener" href="./index.html">Studio</a></li>
+            <li class="header-navigation-item"><a class="header-navigation-link link" rel="noreffer noopener" href="./portfolio.html">Portfolio</a></li>
             <li class="header-navigation-item"><a class="header-navigation-link link" href="#">Contacts</a></li>
         </ul>
     </nav>
